@@ -10,7 +10,7 @@
     <RootNamespace>comex</RootNamespace>
     <AssemblyName>comex</AssemblyName>
     <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
-    <ReleaseVersion>0.1.5.1</ReleaseVersion>
+    <ReleaseVersion>0.1.6.0</ReleaseVersion>
     <Description>console interface for comex project</Description>
     <ApplicationIcon>..\resources\comex.ico</ApplicationIcon>
   </PropertyGroup>
@@ -38,10 +38,11 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Xml" />
-    <Reference Include="log4net, Version=1.2.10.0, Culture=neutral, PublicKeyToken=243860b57ee8afcd">
+    <Reference Include="log4net, Version=1.2.10.0, Culture=neutral, PublicKeyToken=f010a30ad7addeec">
       <SpecificVersion>False</SpecificVersion>
     </Reference>
-    <Reference Include="comex-base, Version=0.1.7.1, Culture=neutral, PublicKeyToken=0738eb9f132ed756">
+    <Reference Include="comex-base, Version=0.1.8.0, Culture=neutral, PublicKeyToken=f010a30ad7addeec">
+      <Package>comex-base</Package>
       <SpecificVersion>False</SpecificVersion>
     </Reference>
   </ItemGroup>
