@@ -1,3 +1,9 @@
+2011-09-29  Armando Basile  <armando.basile@st.com>
+
+	* comex.csproj:
+	* AssemblyInfo.cs:
+	* ConsoleManager.cs: - release 0.1.6.0
+
 2011-09-12  Armando Basile  <hmandevteam@gmail.com>
 
 	* readme.txt: 
